// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Html Html Class Complex 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\frac{a}{\\class{myclass}{b}}" display="block">
  <mfrac data-latex="\\frac{a}{\\class{myclass}{b}}">
    <mi data-latex="a">a</mi>
    <mi data-latex="\\class{myclass}{b}" class="myclass">b</mi>
  </mfrac>
</math>"
`;

exports[`Html Html Class Medium 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\class{myclass}{\\frac{a}{b}}" display="block">
  <mfrac data-latex="\\class{myclass}{\\frac{a}{b}}" class="myclass">
    <mi data-latex="a">a</mi>
    <mi data-latex="b">b</mi>
  </mfrac>
</math>"
`;

exports[`Html Html Class Simple 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\class{myclass}{a}" display="block">
  <mi data-latex="\\class{myclass}{a}" class="myclass">a</mi>
</math>"
`;

exports[`Html Html Class nested 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\class{class1}{\\class{class2}{x}}" display="block">
  <mi data-latex="\\class{class1}{\\class{class2}{x}}" class="class2 class1">x</mi>
</math>"
`;

exports[`Html Html Data 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\data{test1=fu, test2=bar}{x}" display="block">
  <mi data-latex="\\data{test1=fu, test2=bar}{x}" data-test1="fu" data-test2="bar">x</mi>
</math>"
`;

exports[`Html Html Href Complex 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\href{https://mathjax.org}{\\frac{a}{b}}" display="block">
  <mfrac data-latex="\\href{https://mathjax.org}{\\frac{a}{b}}" href="https://mathjax.org">
    <mi data-latex="a">a</mi>
    <mi data-latex="b">b</mi>
  </mfrac>
</math>"
`;

exports[`Html Html Href Inner 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\frac{a}{\\href{https://mathjax.org}{b}}" display="block">
  <mfrac data-latex="\\frac{a}{\\href{https://mathjax.org}{b}}">
    <mi data-latex="a">a</mi>
    <mi data-latex="\\href{https://mathjax.org}{b}" href="https://mathjax.org">b</mi>
  </mfrac>
</math>"
`;

exports[`Html Html Href Simple 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\href{https://mathjax.org}{a}" display="block">
  <mi data-latex="\\href{https://mathjax.org}{a}" href="https://mathjax.org">a</mi>
</math>"
`;

exports[`Html Html Id Complex 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\frac{a}{\\cssId{myid-2}{b}}" display="block">
  <mfrac data-latex="\\frac{a}{\\cssId{myid-2}{b}}">
    <mi data-latex="a">a</mi>
    <mi data-latex="\\cssId{myid-2}{b}" id="myid-2">b</mi>
  </mfrac>
</math>"
`;

exports[`Html Html Id Inner 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\cssId{myid-0}{a}" display="block">
  <mi data-latex="\\cssId{myid-0}{a}" id="myid-0">a</mi>
</math>"
`;

exports[`Html Html Id Simple 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\cssId{myid-1}{\\frac{a}{b}}" display="block">
  <mfrac data-latex="\\cssId{myid-1}{\\frac{a}{b}}" id="myid-1">
    <mi data-latex="a">a</mi>
    <mi data-latex="b">b</mi>
  </mfrac>
</math>"
`;

exports[`Html Html Style Complex 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\style{color:green;background-color:blue}{\\frac{a}{b}}" display="block">
  <mfrac data-latex="\\style{color:green;background-color:blue}{\\frac{a}{b}}" style="color:green;background-color:blue">
    <mi data-latex="a">a</mi>
    <mi data-latex="b">b</mi>
  </mfrac>
</math>"
`;

exports[`Html Html Style Inner 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\frac{a}{\\style{color:green;background-color:blue}{b}}" display="block">
  <mfrac data-latex="\\frac{a}{\\style{color:green;background-color:blue}{b}}">
    <mi data-latex="a">a</mi>
    <mi data-latex="\\style{color:green;background-color:blue}{b}" style="color:green;background-color:blue">b</mi>
  </mfrac>
</math>"
`;

exports[`Html Html Style Nested 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\style{color:red}{\\style{background:blue}{x}}" display="block">
  <mi data-latex="\\style{color:red}{\\style{background:blue}{x}}" style="background:blue; color:red">x</mi>
</math>"
`;

exports[`Html Html Style Row 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\style{color:red}{x+y}" display="block">
  <mrow data-latex="\\style{color:red}{x+y}" style="color:red">
    <mi data-latex="x">x</mi>
    <mo data-latex="+">+</mo>
    <mi data-latex="y">y</mi>
  </mrow>
</math>"
`;

exports[`Html Html Style Simple 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\style{color:green;background-color:blue}{a}" display="block">
  <mi data-latex="\\style{color:green;background-color:blue}{a}" style="color:green;background-color:blue">a</mi>
</math>"
`;
